--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ before_install:
   - docker build -t Karmantrex/docker-react -f Dockerfile.dev.
 
 script:
-  - docker run -e CI=true Karmnatrex/docker-react npm run test -- --coverage
+  - docker run -e CI=true Karmnatrex/docker-react npm run test
 
